--- a/PhersonalApplication/PhersonalApplication.Android/PhersonalApplication.Android.csproj
+++ b/PhersonalApplication/PhersonalApplication.Android/PhersonalApplication.Android.csproj
@@ -109,5 +109,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\customercard.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\newsicon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
