--- a/PhersonalApplication/PhersonalApplication.iOS/PhersonalApplication.iOS.csproj
+++ b/PhersonalApplication/PhersonalApplication.iOS/PhersonalApplication.iOS.csproj
@@ -153,4 +153,7 @@
   <ItemGroup>
     <BundleResource Include="Resources\customercard.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\newsicon.png" />
+  </ItemGroup>
 </Project>
