Design for Card

--- a/PhersonalApplication/PhersonalApplication.iOS/PhersonalApplication.iOS.csproj
+++ b/PhersonalApplication/PhersonalApplication.iOS/PhersonalApplication.iOS.csproj
@@ -156,4 +156,7 @@
   <ItemGroup>
     <BundleResource Include="Resources\newsicon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\phersonalstor.jpg" />
+  </ItemGroup>
 </Project>
