--- a/PhersonalApplication/PhersonalApplication.Android/PhersonalApplication.Android.csproj
+++ b/PhersonalApplication/PhersonalApplication.Android/PhersonalApplication.Android.csproj
@@ -115,5 +115,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\phersonalstor.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ProfileIcon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
